e2e/kind_config/install_eks.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-identity-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-identity-webhook
  template:
    metadata:
      labels:
        app: pod-identity-webhook
    spec:
      serviceAccountName: pod-identity-webhook
      containers:
        - name: pod-identity-webhook
          image: public.ecr.aws/m2n7t9b5/amazon-eks-pod-identity-webhook:latest
          imagePullPolicy: IfNotPresent
          command:
            - /webhook
            - --in-cluster=false
            - --namespace=default
            - --service-name=pod-identity-webhook
            - --annotation-prefix=eks.amazonaws.com
            - --token-audience=sts.amazonaws.com
            - --logtostderr
          volumeMounts:
            - name: cert
              mountPath: "/etc/webhook/certs"
              readOnly: true
      volumes:
        - name: cert
          secret:
            secretName: pod-identity-webhook-cert
---
apiVersion: v1
kind: Service
metadata:
  name: pod-identity-webhook
  namespace: default
  annotations:
    prometheus.io/port: "443"
    prometheus.io/scheme: "https"
    prometheus.io/scrape: "true"
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: pod-identity-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook
  namespace: default
  annotations:
    cert-manager.io/inject-ca-from: default/pod-identity-webhook
webhooks:
  - name: pod-identity-webhook.amazonaws.com
    failurePolicy: Ignore
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
    clientConfig:
      service:
        name: pod-identity-webhook
        namespace: default
        path: "/mutate"
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "*"
